(library
 (name jsoo_react_lib)
 (public_name jsoo-react.lib)
 (wrapped false)
 (preprocess
  (pps gen_js_api.ppx))
 (js_of_ocaml
  (javascript_files ReactJs.js ReactDOMJs.js))
 (libraries js_of_ocaml gen_js_api))

(rule
 (targets react.ml)
 (deps react.mli)
 (action
  (run %{bin:gen_js_api} -o %{targets} %{deps})))

(rule
 (targets reactDOM.ml)
 (deps reactDOM.mli)
 (action
  (run %{bin:gen_js_api} -o %{targets} %{deps})))
