(library
 (name react)
 (public_name jsoo-react.lib)
 (preprocess
  (pps gen_js_api.ppx))
 (js_of_ocaml
  (javascript_files react.js react-dom.js))
 (libraries js_of_ocaml gen_js_api))

(rule
 (targets core.ml)
 (deps core.mli)
 (action
  (run %{bin:gen_js_api} -o %{targets} %{deps})))

(rule
 (targets dom.ml)
 (deps dom.mli)
 (action
  (run %{bin:gen_js_api} -o %{targets} %{deps})))
