(executable
 (name test_jsoo_react)
 (libraries webtest webtest-js gen_js_api jsoo_react_lib jsoo_react_test
   js_of_ocaml)
 (preprocess
  (pps jsoo-react.ppx js_of_ocaml-ppx))
 (js_of_ocaml
  (javascript_files jsdom.js))
 (modes js))

(rule
 (targets jsdom.ml)
 (deps jsdom.mli)
 (action
  (run %{bin:gen_js_api} -o %{targets} %{deps})))

(rule
 (alias runtest)
 (deps test_jsoo_react.bc.js)
 (action
  (run node test_jsoo_react.bc.js)))
