(executable
 (name test_jsoo_react)
 (libraries webtest webtest-js gen_js_api react jsoo_react_test js_of_ocaml)
 (preprocess
  (pps jsoo-react.ppx js_of_ocaml-ppx))
 (js_of_ocaml
  (javascript_files react-requires.js jsdom.js))
 (modes js))

(rule
 (targets jsdom.ml)
 (deps jsdom.mli)
 (action
  (run %{bin:gen_js_api} -o %{targets} %{deps})))

(rule
 (targets
  (dir node_modules))
 (deps package.json)
 (action
  (run npm install --no-save)))

(rule
 (alias runtest)
 (deps external.js test_jsoo_react.bc.js node_modules)
 (action
  (run node test_jsoo_react.bc.js)))
