(executables
 (names App)
 (modes byte)
 (libraries gen_js_api lwt js_of_ocaml js_of_ocaml-lwt js_of_ocaml-ppx jsoo_react_lib)
 (js_of_ocaml
  (javascript_files static-requires.js))
 (preprocess
  (pps gen_js_api.ppx ppx_blob js_of_ocaml-ppx jsoo_react_ppx)))

(alias
 (name default)
 (deps App.js static/primitive.css static/prism.css static/prism.js))
