(executable
 (name main)
 (libraries reason ppxlib jsoo_react_ppx))

(rule
 (targets pp_reason.result)
 (deps test_reason.ml)
 (action
  (run ./main.exe --impl %{deps} -o %{targets})))

(rule
 (targets test_reason.ml)
 (deps input_reason.re)
 (action
  (with-stdout-to
   %{targets}
   (run refmt --parse=re --print=ml %{deps}))))

(rule
 (targets element_attribute_error.result)
 (deps
  (:main ./main.exe)
  (:input element_attribute_error.ml))
 (action
  (with-stderr-to
   %{targets}
   (system "! ./%{main} %{input}"))))

(rule
 (targets pp_ocaml.result)
 (deps input_ocaml.ml)
 (action
  (run ./main.exe --impl %{deps} -o %{targets})))

(rule
 (alias runtest)
 (action
  (progn
   (diff pp_reason.expected pp_reason.result)
   (diff pp_ocaml.expected pp_ocaml.result)
   (diff element_attribute_error.expected element_attribute_error.result))))
