(executable
 (name main)
 (libraries reason ppxlib jsoo_react_ppx))

(rule
 (targets pp_reason.result)
 (deps test_reason.ml)
 (action
  (run ./main.exe --impl %{deps} -o %{targets})))

(rule
 (targets test_reason.ml)
 (deps input_reason.re)
 (action
  (with-stdout-to
   %{targets}
   (run refmt --parse=re --print=ml %{deps}))))

(rule
 (targets pp_errors.actual)
 (deps
  (:pp main.exe)
  (:input input_errors.ml))
 (action
  (setenv
   "OCAML_COLOR"
   "never"
   (with-stderr-to
    %{targets}
    (bash "! ./%{pp} --impl %{input}")))))

(rule
 (targets pp_ocaml.result)
 (deps input_ocaml.ml)
 (action
  (run ./main.exe --impl %{deps} -o %{targets})))

(rule
 (alias runtest)
 (action
  (progn
   (diff pp_errors.expected pp_errors.actual)
   (diff pp_reason.expected pp_reason.result)
   (diff pp_ocaml.expected pp_ocaml.result))))
