(executable
 (name main)
 (libraries reason ppxlib jsoo_react_ppx))

(rule
 (targets pp_reason.result)
 (deps test_reason.ml)
 (action
  (run ./main.exe --impl %{deps} -o %{targets})))

(rule
 (targets test_reason.ml)
 (deps input_reason.re)
 (action
  (with-stdout-to
   %{targets}
   (run refmt --parse=re --print=ml %{deps}))))

(rule
 (targets pp_errors_01_external_component_multi_prim.actual)
 (deps
  (:pp main.exe)
  (:input input_errors_01_external_component_multi_prim.ml))
 (action
  (setenv
   "OCAML_COLOR"
   "never"
   (with-stderr-to
    %{targets}
    (bash "! ./%{pp} --impl %{input}")))))

(rule
 (targets pp_errors_02_external_component_unlabelled_arg.actual)
 (deps
  (:pp main.exe)
  (:input input_errors_02_external_component_unlabelled_arg.ml))
 (action
  (setenv
   "OCAML_COLOR"
   "never"
   (with-stderr-to
    %{targets}
    (bash "! ./%{pp} --impl %{input}")))))

(rule
 (targets pp_ocaml.result)
 (deps input_ocaml.ml)
 (action
  (run ./main.exe --impl %{deps} -o %{targets})))

(rule
 (alias runtest)
 (action
  (progn
   (diff pp_errors_01_external_component_multi_prim.expected
     pp_errors_01_external_component_multi_prim.actual)
   (diff pp_errors_02_external_component_unlabelled_arg.expected
     pp_errors_02_external_component_unlabelled_arg.actual)
   (diff pp_reason.expected pp_reason.result)
   (diff pp_ocaml.expected pp_ocaml.result))))
